# helper-agent

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  pyproject.toml
configs/: agent.yaml  data_processing.yaml  embedding.yaml
data/: filtered_docs.json
data/vectordb/: chroma.sqlite3
data/vectordb/1f658708-910c-44c0-8c72-30dba95e175e/: index_metadata.pickle
data/vectordb/73c08c38-4b21-4e72-9b81-143c128e9a28/: index_metadata.pickle
docs/: data_preparation.md
helper_agent/agent/offline/: graph.py  nodes.py  state.py
helper_agent/agent/online/: graph.py  state.py  tools.py
helper_agent/data/: chunkers.py  cleaners.py  filters.py  models.py  parsers.py
helper_agent/embed/: embedder.py  vectordb.py
helper_agent/utilities/: configs.py  filesystem.py  llm.py  logger.py  rate_limit.py  utils.py
helper_agent/vectorstore/: embedder.py  retriever.py  vectordb.py
notebooks/: 01_data_exploration.ipynb  02_chunking_analysis.ipynb
prompts/: evaluate.txt  reformulate.txt
prompts/offline/: generate.txt
prompts/online/: system.txt
scripts/: process_docs.py  run_agent.py
scripts/data/: process_docs.py
scripts/embed/: build_vectordb.py
